# Compo

./: .#tmk  .gitignore  .gitlab-ci.yml  .gitlab-ci_check.yaml  .gitlab-ci_core.yaml  .gitlab-ci_cpp.yaml  .gitlab-ci_graph.yaml  .gitlab-ci_model.yaml  .gitlab-ci_python.yaml  .gitlab-ci_uml.yaml  .gitmodules  CMakeCache.txt  COPYING.README  Config  Dockerfile  README.md  TODO  Types.cpp  Types.hpp  a  a.hpp  a.html  a.out  b  c.cpp  gen.yaml  link.cpp  link.hpp  main.cpp  main2.cpp  main3.cpp  note  note.md  pyproject.toml  reflexion.md  result_cpp_1.STRUCT_1.simple.xml  result_cpp_1.STRUCT_2.default.xml  result_cpp_1.STRUCT_2.extra.xml  result_cpp_1.STRUCT_2.parent.xml  result_cpp_1.STRUCT_2.parent.xml.html  (+15 more)
Examples/HelloWord/: .compoMe.py  CMakeLists.txt  Readme.md  file.yaml  target.list
Examples/HelloWord/compile/file/: import.cmake  links.cmake  var.cmake
Examples/HelloWord/inc/Components/: HelloWord.hpp  HelloWord_Hello_I_inter.hpp  HelloWord_fac.hpp
Examples/HelloWord/inc/Data/: file.hpp
Examples/HelloWord/src/: main.cpp
Examples/HelloWord/src/Components/: HelloWord.cpp  HelloWord_Hello_I_inter.cpp  HelloWord_Hello_I_inter_fac.cpp  HelloWord_Hello_I_inter_function.cpp  HelloWord_Hello_I_inter_get_set.cpp  HelloWord_fac.cpp  HelloWord_function.cpp  HelloWord_get_set.cpp  HelloWord_serialization.cpp
Examples/HelloWord/src/Data/: file.cpp
Examples/Http_server/: CMakeLists.txt  README.md  file.yaml
Examples/Http_server/compile/: import.cmake  links.cmake  var.cmake
Examples/Http_server/compile/file/: Ext_links.cmake  import.cmake  links.cmake  main.cmake  var.cmake
Examples/Http_server/inc/Components/: Sensor_Thermal_Sensor_I_capteur1.hpp
Examples/Http_server/inc/Data/: file.hpp
Examples/Http_server/src/: main.cpp
Examples/Http_server/src/Components/: Sensor_Information_I_information.cpp  Sensor_Information_I_information_fac.cpp  Sensor_Information_I_information_function.cpp  Sensor_Thermal_Sensor_I_capteur1.cpp  Sensor_Thermal_Sensor_I_capteur1_fac.cpp  Sensor_Thermal_Sensor_I_capteur1_function.cpp  Sensor_Thermal_Sensor_I_capteur1_get_set.cpp  Sensor_get_set.cpp
Examples/Http_server/src/Data/: file.cpp
Examples/Interface/: CMakeLists.txt  README.md  file.yaml  ignore.list  target.list
Examples/Interface/compile/file/: import.cmake  links.cmake  main_esp32.cmake  var.cmake
Examples/Interface/inc/: term.hpp
Examples/Interface/inc/Components/: Require_helper.hpp  Require_helper_multi.hpp
Examples/Interface/inc/Data/: Range.hpp  Range_builder.hpp  Range_fac.hpp  file.hpp
Examples/Interface/inc/Interfaces/: Caller_stream.hpp  Function_stream_send.hpp  Return_stream_recv.hpp  Return_stream_send.hpp
Examples/Interface/inc/Links/: Link.hpp
Examples/Interface/inc/Structs/: Range.hpp  Range_builder.hpp  Range_fac.hpp
Examples/Interface/src/: Serialization_context.cpp  main.cpp  term.cpp
Examples/Interface/src/Data/: Range.cpp  Range_builder.cpp  Range_fac.cpp  Range_serialization.cpp  file.cpp
Examples/Interface/src/Links/: Link.cpp
Examples/Interface/src/Structs/: Range.cpp  Range_builder.cpp  Range_fac.cpp  Range_function.cpp  Range_get_set.cpp  Range_serialization.cpp
Examples/Interface/src/Types/: string.cpp
Examples/Serialization/: CMakeLists.txt  README.md  bdd.txt  file.yaml  ignore.list  target.list
Examples/Serialization/compile/file/: import.cmake  var.cmake
Examples/Serialization/inc/: MyString.hpp  Serialization_context.hpp
Examples/Serialization/inc/Components/: Component.hpp
Examples/Serialization/inc/Data/: File.hpp  File_builder.hpp  File_fac.hpp  User.hpp  User_builder.hpp  User_fac.hpp  file.hpp  string.hpp
Examples/Serialization/inc/Interfaces/: Return_stream_recv.hpp
Examples/Serialization/inc/Structs/: File.hpp  File_builder.hpp  File_fac.hpp  User.hpp  User_builder.hpp  User_fac.hpp
Examples/Serialization/src/: MyString.cpp  main.cpp
Examples/Serialization/src/Data/: File.cpp  File_builder.cpp  File_fac.cpp  File_serialization.cpp  User.cpp  User_builder.cpp  User_fac.cpp  User_serialization.cpp  file.cpp
Examples/Serialization/src/Links/: Link.cpp
Examples/Serialization/src/Structs/: File.cpp  File_builder.cpp  File_fac.cpp  File_function.cpp  File_get_set.cpp  File_serialization.cpp  User.cpp  User_builder.cpp  User_fac.cpp  (+3 more)
Examples/dbus_client/: .clang_complete  CMakeLists.txt  dbus.yaml  file.yaml  target.list
Examples/dbus_client/src/: main.cpp
example/project1/: .compoMe.py  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1  project1_thermique.yaml
example/project1/src/: main.cpp
lib_model/CPP/BASE_LOG/: CMakeLists.txt  base_log.yaml
lib_model/CPP/BASE_MATH/: CMakeLists.txt
lib_model/CPP/BASE_STRUCT/: CMakeLists.txt
save2/: CMakeLists.txt
save2/compo/: test.yaml  test2.yaml
save2/compo/cpp/: types.yaml
save2/inc/Data/: Types.hpp
save2/inc/Interfaces/: Caller.hpp  Interface.hpp
save2/inc/Links/: Link.hpp
save2/src/Components/: Component.cpp
save2/src/Interfaces/: Interface.cpp
test/: .compoMe.py  CMakeLists.txt  a.out  dep1
test/compo/: a.yaml  model.yaml  t.yaml  tA.yaml
test/graph/: D2.dot
test/graph/Links/: Complex_in_log.html
test/graph/component/: C5.html  C7.html  C8.html
test/graph/uml/: Components.puml  Deployments.puml
test/inc/Data/: Struct_A.hpp  Struct_B.hpp  Struct_B_1.hpp  Struct_B_2.hpp  Struct_B_2_1.hpp  Struct_C.hpp  Struct_Pair.hpp  Type_mstring.hpp  Type_vector_i.hpp  test.hpp
test/include/: lapin.hpp
test/src/: lapin.cpp
test/src/Data/: Struct_A.cpp  Struct_B.cpp  Struct_B_1.cpp  Struct_B_2.cpp  Struct_B_2_1.cpp  Struct_C.cpp  Struct_Pair.cpp
test2/: .compoMe.py  CMakeLists.txt  dep1  model.yaml  model2.yaml  model3.yaml
test2/doc/: .compoMe.py
test2/doc/graph/: D_t1.dot  D_t2.dot  D_t3.dot
test2/inc/Data/: Struct_A.hpp  Struct_B.hpp  Struct_C.hpp  Struct_D.hpp
test2/inc/Interfaces/: Caller.hpp  Fake.hpp  Function_stream.hpp  Return_stream.hpp
test2/src/: main.cpp
test2/src/Data/: Struct_A.cpp  Struct_B.cpp  Struct_C.cpp  Struct_D.cpp
test2/src/Interfaces/: Fake.cpp
(+1497 files in other folders)
